--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==2.0.10
 click==8.0.3
 filelock==3.4.2
 Flask==2.0.2
+gunicorn==20.1.0
 huggingface-hub==0.4.0
 idna==3.3
 itsdangerous==2.0.1
